--- a/stylescontact.css
+++ b/stylescontact.css
@@ -28,7 +28,7 @@ header h1 {
     font-size: 2.5rem;
     text-align: center;
     margin-bottom: 40px;
-    color: #ffffff;
+    color: #000000;
 }
 /* Menu principal */
 .header-nav {
